fix: navbar menu

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <div>
                 <div>
                     <h3>OLÁ, EU SOU</h3>
-                    <h1 id="name">LEONARDO CALAZANS</h1>
+                    <h1 id="name">LEONARDO <spam class="br">CALAZANS</spam></h1>
                     <h3>DESENVOLVEDOR FRONT-END WEB & MOBILE</h3>
                 </div>
 
