fix: image background png

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                     </button>
                 </div>
             </div>
-            <img alt="Imagem" class="img-looper icon" src="/assets/Looper BG.svg">
+            <img alt="Imagem" class="img-looper icon" src="/assets/Looper BG.png">
         </section>
 
         <section class="about-me section" id="about-me">
