fix: src background image

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                     </button>
                 </div>
             </div>
-            <img alt="Imagem" class="img-looper icon" src="/assets/looper-background.png">
+            <img alt="Imagem" class="img-looper icon" src="./assets/looper-background.png">
         </section>
 
         <section class="about-me section" id="about-me">
