style: removing expirence categoru title

--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
             <h2>EXPERIÊNCIA</h2>
             <div class="flex-sb experience-company">
                 <h4 class="title-company selected">Voltz</h4>
-                <h4 class="title-company">Pacheco</h4>
+                <!-- <h4 class="title-company">Pacheco</h4> -->
             </div>
             <div class="m-p-0">
                 <h4>Estágio como desenvolvedor front-end mobile</h4>
