chore: title time experience

--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
                 <h4>Estágio como desenvolvedor front-end mobile</h4>
                 <div class="flex-sb">
                     <h5 class="title-company-descripition m-p-0">Voltz</h5>
-                    <h5 class="m-p-0">Outubro 2022 - Atual</h5>
+                    <h5 class="m-p-0">Agosto 2021 - Atual</h5>
                 </div>
                 <p class="m-p-0">
                     Trabalhando no projeto do aplicativo da empresa, cumprindo prazos, entregando novas funcionalidades
