feat: mailto and refactor js file onClickButton

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                         </svg>
                         <p>Currículo</p>
                     </button>
-                    <button class="button-flex button-about-me button-grad" type="button" onclick="">
+                    <button class="button-flex button-about-me button-grad" type="button" onclick="onClickSendEmail()">
                         <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"
                             alt="Botão para enviar E-mail">
                             <path
@@ -322,7 +322,7 @@
     </footer>
     <script src="./javascript/goHome.js"></script>
     <script src="./javascript/menu.js"></script>
-    <script src="./javascript/onClickLink.js"></script>
+    <script src="./javascript/onClickButtons.js"></script>
 </body>
 
 </html>
