feat: adding onclick curriculo button for download curriculo

--- a/index.html
+++ b/index.html
@@ -143,7 +143,8 @@
                 </div>
 
                 <div class="flex-sb flex-st">
-                    <button class="button-flex button-about-me button-grad-blue" type="button" onclick="">
+                    <button class="button-flex button-about-me button-grad-blue" type="submit"
+                        onclick="onClickDownload()">
                         <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"
                             alt="Botão para baixar o currículo">
                             <g clip-path="url(#clip0_92909_879)">
