style: refactoring text

--- a/index.html
+++ b/index.html
@@ -94,10 +94,7 @@
             <div>
                 <h2>SOBRE MIM</h2>
                 <p>
-                    Possuo boas softskills e vontade de aprender. Tendo experiência em uma Fintech, trabalhando com
-                    metodologias ágeis, padronização de código, arquitetura de projeto e sendo elogiado pelo bom
-                    relacionamento nas equipes. É importante ter domínio em tecnologias, porém, também é importante
-                    saber comunicar-se e lidar com diferentes tipos de pessoas.
+                    Possuo boas softskills, vontade de aprender e não tenho mendo de sair da minha zona de conforto. Tendo experiência em uma Fintech trabalhando com metodologias ágeis, padronização de código, arquitetura de projeto e sendo elogiado pelo bom relacionamento nas equipes. É importante ter domínio em tecnologias, porém, também é importante saber comunicar-se e lidar com diferentes tipos de pessoas. 
                 </p>
 
                 <div class="flex-icon">
@@ -194,9 +191,11 @@
                     <h5 class="m-p-0">Agosto 2021 - Atual</h5>
                 </div>
                 <p class="m-p-0">
-                    Trabalhando no projeto do aplicativo da empresa, cumprindo prazos, entregando novas funcionalidades
-                    e fazendo correções. Participando dos ritos de metodologias ágeis como KANBAN e SCRUM, garantindo o
-                    crescimento do time a cada sprint.
+                    Voltz é uma Fintech que tem como objetivo ajudar pessoas a fazer negócios com o uso de tecnologia.
+                    Como desenvolvedor front-end, atuei no desenvolvimento do app de carteira digital 'Conta Voltz', um
+                    app com fluxo conversacional para Android e iOS. Usando tecnologias como React Native, React, Mobx,
+                    MongoDB, Firebase, Axios, Styled
+                    Components, etc.
                 </p>
             </div>
 
