--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             <div>
                 <h2>SOBRE MIM</h2>
                 <p>
-                    Possuo boas softskills, vontade de aprender e não tenho mendo de sair da minha zona de conforto. Tendo experiência em uma Fintech trabalhando com metodologias ágeis, padronização de código, arquitetura de projeto e sendo elogiado pelo bom relacionamento nas equipes. É importante ter domínio em tecnologias, porém, também é importante saber comunicar-se e lidar com diferentes tipos de pessoas. 
+                    Possuo boas softskills, vontade de aprender e não tenho medo de sair da minha zona de conforto. Tendo experiência em uma Fintech trabalhando com metodologias ágeis, padronização de código, arquitetura de projeto e sendo elogiado pelo bom relacionamento nas equipes. É importante ter domínio em tecnologias, porém, também é importante saber comunicar-se e lidar com diferentes tipos de pessoas. 
                 </p>
 
                 <div class="flex-icon">
